src/main/java/com/regtab/core/rtl/parser/RTLParser.java
// Generated from D:/yd/code/regtab/regtab/src/main/antlr4/RTL.g4 by ANTLR 4.13.1
package com.regtab.core.rtl.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class RTLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, ATTRIBUTE=2, VALUE=3, SKIPPED=4, FACTOR=5, PREFIX=6, SUFFIX=7, 
		RECORD=8, JOIN=9, SCHEMA=10, LEFT=11, RIGHT=12, UP=13, DOWN=14, IN_ROW=15, 
		IN_COL=16, IN_CELL=17, SUB_LEFT=18, SUB_RIGHT=19, SUB_UP=20, SUB_DOWN=21, 
		IN_SUB_ROW=22, IN_SUB_COL=23, ROW=24, COL=25, MIN=26, MAX=27, THIS=28, 
		AND=29, OR=30, NOT=31, TRUE=32, FALSE=33, GT=34, GE=35, LT=36, LE=37, 
		EQ=38, NEQ=39, CONTAINS=40, MATCHES=41, PLUS=42, MINUS=43, MULT=44, MOD=45, 
		LPAREN=46, RPAREN=47, LCURLY=48, RCURLY=49, LSQUARE=50, RSQUARE=51, ARROW=52, 
		COLON=53, SEMICOLON=54, COMMA=55, DOLLAR=56, QUESTION=57, VBAR=58, EXCLAMATION=59, 
		DOUBLE_AMPERSAND=60, DOUBLE_VBAR=61, DOUBLE_PERIOD=62, ASSIGN=63, PERIOD=64, 
		TAG=65, ID=66, INT=67, DOUBLE=68, HEX=69, STRING=70, WS=71, LineComment=72;
	public static final int
		RULE_table = 0, RULE_subtable = 1, RULE_rows = 2, RULE_label = 3, RULE_copy = 4, 
		RULE_quantifier = 5, RULE_zeroOrOne = 6, RULE_zeroOrMore = 7, RULE_oneOrMore = 8, 
		RULE_exactly = 9, RULE_row = 10, RULE_subrows = 11, RULE_subrow = 12, 
		RULE_cells = 13, RULE_cell = 14, RULE_components = 15, RULE_component = 16, 
		RULE_componentType = 17, RULE_tags = 18, RULE_actions = 19, RULE_action = 20, 
		RULE_actionType = 21, RULE_actionBody = 22, RULE_struct = 23, RULE_structx = 24, 
		RULE_substructx = 25, RULE_substruct_ = 26, RULE_startText = 27, RULE_separator = 28, 
		RULE_endText = 29, RULE_choice = 30, RULE_choiceBody = 31, RULE_cond = 32, 
		RULE_lookup = 33, RULE_limit = 34, RULE_direction = 35, RULE_where = 36, 
		RULE_range = 37, RULE_rowRange = 38, RULE_colRange = 39, RULE_rangeBody = 40, 
		RULE_start = 41, RULE_end = 42, RULE_relative = 43, RULE_componentIndex = 44, 
		RULE_expr = 45, RULE_compOp = 46, RULE_binaryOp = 47, RULE_func = 48, 
		RULE_arg = 49, RULE_prop = 50, RULE_bool = 51, RULE_arithmOp = 52, RULE_strOp = 53;
	private static String[] makeRuleNames() {
		return new String[] {
			"table", "subtable", "rows", "label", "copy", "quantifier", "zeroOrOne", 
			"zeroOrMore", "oneOrMore", "exactly", "row", "subrows", "subrow", "cells", 
			"cell", "components", "component", "componentType", "tags", "actions", 
			"action", "actionType", "actionBody", "struct", "structx", "substructx", 
			"substruct_", "startText", "separator", "endText", "choice", "choiceBody", 
			"cond", "lookup", "limit", "direction", "where", "range", "rowRange", 
			"colRange", "rangeBody", "start", "end", "relative", "componentIndex", 
			"expr", "compOp", "binaryOp", "func", "arg", "prop", "bool", "arithmOp", 
			"strOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'E'", null, null, null, "'FACTOR'", "'PREFIX'", "'SUFFIX'", "'RECORD'", 
			"'JOIN'", "'SCHEMA'", "'LEFT'", "'RIGHT'", "'UP'", "'DOWN'", "'ROW'", 
			"'COL'", "'CELL'", "'$LEFT'", "'$RIGHT'", "'$UP'", "'$DOWN'", "'$ROW'", 
			"'$COL'", "'R'", "'C'", "'MIN'", "'MAX'", "'THIS'", null, null, null, 
			"'TRUE'", "'FALSE'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'CONTAINS'", 
			"'MATCHES'", "'+'", "'-'", "'*'", "'%'", "'('", "')'", "'{'", "'}'", 
			"'['", "']'", "'->'", "':'", "';'", "','", "'$'", "'?'", "'|'", "'!'", 
			"'&&'", "'||'", "'..'", "'='", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "ATTRIBUTE", "VALUE", "SKIPPED", "FACTOR", "PREFIX", "SUFFIX", 
			"RECORD", "JOIN", "SCHEMA", "LEFT", "RIGHT", "UP", "DOWN", "IN_ROW", 
			"IN_COL", "IN_CELL", "SUB_LEFT", "SUB_RIGHT", "SUB_UP", "SUB_DOWN", "IN_SUB_ROW", 
			"IN_SUB_COL", "ROW", "COL", "MIN", "MAX", "THIS", "AND", "OR", "NOT", 
			"TRUE", "FALSE", "GT", "GE", "LT", "LE", "EQ", "NEQ", "CONTAINS", "MATCHES", 
			"PLUS", "MINUS", "MULT", "MOD", "LPAREN", "RPAREN", "LCURLY", "RCURLY", 
			"LSQUARE", "RSQUARE", "ARROW", "COLON", "SEMICOLON", "COMMA", "DOLLAR", 
			"QUESTION", "VBAR", "EXCLAMATION", "DOUBLE_AMPERSAND", "DOUBLE_VBAR", 
			"DOUBLE_PERIOD", "ASSIGN", "PERIOD", "TAG", "ID", "INT", "DOUBLE", "HEX", 
			"STRING", "WS", "LineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RTL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RTLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TableContext extends ParserRuleContext {
		public List<SubtableContext> subtable() {
			return getRuleContexts(SubtableContext.class);
		}
		public SubtableContext subtable(int i) {
			return getRuleContext(SubtableContext.class,i);
		}
		public TableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).enterTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).exitTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RTLVisitor ) return ((RTLVisitor<? extends T>)visitor).visitTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableContext table() throws RecognitionException {
		TableContext _localctx = new TableContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_table);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(108);
				subtable();
				}
				}
				setState(111); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 48)) & ~0x3f) == 0 && ((1L << (_la - 48)) & 131077L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubtableContext extends ParserRuleContext {
		public List<RowContext> row() {
			return getRuleContexts(RowContext.class);
		}
		public RowContext row(int i) {
			return getRuleContext(RowContext.class,i);
		}
		public RowsContext rows() {
			return getRuleContext(RowsContext.class,0);
		}
		public SubtableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subtable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).enterSubtable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).exitSubtable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RTLVisitor ) return ((RTLVisitor<? extends T>)visitor).visitSubtable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubtableContext subtable() throws RecognitionException {
		SubtableContext _localctx = new SubtableContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_subtable);
		try {
			int _alt;
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LSQUARE:
			case TAG:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(114); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(113);
						row();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(116); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				}
				break;
			case LCURLY:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				rows();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RowsContext extends ParserRuleContext {
		public TerminalNode LCURLY() { return getToken(RTLParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(RTLParser.RCURLY, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(RTLParser.ARROW, 0); }
		public ActionsContext actions() {
			return getRuleContext(ActionsContext.class,0);
		}
		public List<RowContext> row() {
			return getRuleContexts(RowContext.class);
		}
		public RowContext row(int i) {
			return getRuleContext(RowContext.class,i);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public RowsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rows; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).enterRows(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).exitRows(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RTLVisitor ) return ((RTLVisitor<? extends T>)visitor).visitRows(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RowsContext rows() throws RecognitionException {
		RowsContext _localctx = new RowsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_rows);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(LCURLY);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 28)) & ~0x3f) == 0 && ((1L << (_la - 28)) & 8521215377465L) != 0)) {
				{
				setState(122);
				cond();
				setState(123);
				match(ARROW);
				}
			}

			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2016L) != 0)) {
				{
				setState(127);
				actions();
				}
			}

			setState(131); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(130);
				row();
				}
				}
				setState(133); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LSQUARE || _la==TAG );
			setState(135);
			match(RCURLY);
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(136);
				quantifier();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelContext extends ParserRuleContext {
		public TerminalNode TAG() { return getToken(RTLParser.TAG, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).exitLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RTLVisitor ) return ((RTLVisitor<? extends T>)visitor).visitLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(TAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CopyContext extends ParserRuleContext {
		public TerminalNode TAG() { return getToken(RTLParser.TAG, 0); }
		public CopyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_copy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).enterCopy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).exitCopy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RTLVisitor ) return ((RTLVisitor<? extends T>)visitor).visitCopy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CopyContext copy() throws RecognitionException {
		CopyContext _localctx = new CopyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_copy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(TAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuantifierContext extends ParserRuleContext {
		public ZeroOrOneContext zeroOrOne() {
			return getRuleContext(ZeroOrOneContext.class,0);
		}
		public ZeroOrMoreContext zeroOrMore() {
			return getRuleContext(ZeroOrMoreContext.class,0);
		}
		public OneOrMoreContext oneOrMore() {
			return getRuleContext(OneOrMoreContext.class,0);
		}
		public ExactlyContext exactly() {
			return getRuleContext(ExactlyContext.class,0);
		}
		public QuantifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quantifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).enterQuantifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).exitQuantifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RTLVisitor ) return ((RTLVisitor<? extends T>)visitor).visitQuantifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuantifierContext quantifier() throws RecognitionException {
		QuantifierContext _localctx = new QuantifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_quantifier);
		try {
			setState(147);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUESTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				zeroOrOne();
				}
				break;
			case MULT:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				zeroOrMore();
				}
				break;
			case PLUS:
				enterOuterAlt(_localctx, 3);
				{
				setState(145);
				oneOrMore();
				}
				break;
			case LCURLY:
				enterOuterAlt(_localctx, 4);
				{
				setState(146);
				exactly();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ZeroOrOneContext extends ParserRuleContext {
		public TerminalNode QUESTION() { return getToken(RTLParser.QUESTION, 0); }
		public ZeroOrOneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zeroOrOne; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).enterZeroOrOne(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).exitZeroOrOne(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RTLVisitor ) return ((RTLVisitor<? extends T>)visitor).visitZeroOrOne(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ZeroOrOneContext zeroOrOne() throws RecognitionException {
		ZeroOrOneContext _localctx = new ZeroOrOneContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_zeroOrOne);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(QUESTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ZeroOrMoreContext extends ParserRuleContext {
		public TerminalNode MULT() { return getToken(RTLParser.MULT, 0); }
		public ZeroOrMoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zeroOrMore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).enterZeroOrMore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).exitZeroOrMore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RTLVisitor ) return ((RTLVisitor<? extends T>)visitor).visitZeroOrMore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ZeroOrMoreContext zeroOrMore() throws RecognitionException {
		ZeroOrMoreContext _localctx = new ZeroOrMoreContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_zeroOrMore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(MULT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OneOrMoreContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(RTLParser.PLUS, 0); }
		public OneOrMoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oneOrMore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).enterOneOrMore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTLListener ) ((RTLListener)listener).exitOneOrMore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RTLVisitor ) return ((RTLVisitor<? extends T>)visitor).visitOneOrMore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OneOrMoreContext oneOrMore() throws RecognitionException {
		OneOrMoreContext _localctx = new OneOrMoreContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_oneOrMore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(PLUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
